Document PPDG/src/objects/Cash_Denomination__c.object
<CustomObject>
    <fields>
        <fullName>CCY_of_Denomination__c</fullName>
        <label>CCY of Denomination</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Computed_Value__c</fullName>
        <formula>Number_of_Denomination__c * Value_of_Denomination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Computed Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Denomination__c</fullName>
        <description>Number of Denomination Notes/Coins</description>
        <label>Number of Denomination</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teller_Depository__c</fullName>
        <label>Teller Depository</label>
        <referenceTo>Teller_Depository__c</referenceTo>
        <relationshipLabel>Cash Denominations</relationshipLabel>
        <relationshipName>Cash_Denominations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_Denomination__c</fullName>
        <formula>IF( CCY_of_Denomination__c = &quot;GBP&quot;, (Value_of_Denomination__c * Number_of_Denomination__c),0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value of GBP Denomination</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_EUR_Denomination__c</fullName>
        <formula>IF( CCY_of_Denomination__c = &quot;EUR&quot;, (Value_of_Denomination__c * Number_of_Denomination__c),0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value of EUR Denomination</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_QAR_Denomination__c</fullName>
        <formula>IF( CCY_of_Denomination__c = &quot;QAR&quot;, (Value_of_Denomination__c * Number_of_Denomination__c),0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value of QAR Denomination</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_USD_Denomination__c</fullName>
        <formula>IF( CCY_of_Denomination__c = &quot;USD&quot;, (Value_of_Denomination__c * Number_of_Denomination__c),0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value of USD Denomination</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_of_Denomination__c</fullName>
        <description>Value of Denomination 
e.g. 10 for £10, 0.5 for £0.50</description>
        <label>Value of Denomination</label>
        <precision>9</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Cash Denomination</label>
    <nameField>
        <label>Cash Denomination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Denominations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>